--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     git:
       url: https://github.com/FlutterFlow/flutterflow_dash_chat.git
 
+  dropdown_button2: 2.0.0
   file_picker: 5.2.6
   firebase_auth: 4.6.2
   firebase_auth_platform_interface: 6.15.2
@@ -83,7 +84,6 @@ dependencies:
   plugin_platform_interface: 2.1.3
   provider: 6.0.4
   rxdart: 0.27.7
-  share_plus: 6.3.1
   shared_preferences: 2.0.15
   shared_preferences_android: 2.1.0
   shared_preferences_ios: 2.1.1
@@ -92,7 +92,6 @@ dependencies:
   sign_in_with_apple: 4.3.0
   sign_in_with_apple_platform_interface: 1.0.0
   sign_in_with_apple_web: 1.0.1
-  smooth_page_indicator: 1.0.1
   sqflite: 2.2.6
   stream_transform: 2.1.0
   timeago: 3.2.2
